--- a/base.css
+++ b/base.css
@@ -1,43 +1,5 @@
-/* FONTS */
-
-/* I like the Libre Baskerville typeface, which is a nice Serif font.
- *
- * https://github.com/impallari/Libre-Baskerville
- * https://web.archive.org/web/20150918205958/http://www.impallari.com/projects/update/86
- * https://fonts.google.com/specimen/Libre+Baskerville
- *
- * A copy is in the "fonts" dir.
- */
-@font-face {
-  font-family: 'Libre Baskerville';
-  font-style: normal;
-  font-weight: 400;
-  font-display: fallback;
-  src: local('Libre Baskerville'), local('LibreBaskerville-Regular'),
-    url(/fonts/libre-baskerville.woff2) format('woff2'),
-    url(./fonts/libre-baskerville.woff2) format('woff2');
-}
-@font-face {
-  font-family: 'Libre Baskerville';
-  font-style: normal;
-  font-weight: 700;
-  font-display: fallback;
-  src: local('Libre Baskerville Bold'), local('LibreBaskerville-Bold'),
-    url(/fonts/libre-baskerville-bold.woff2) format('woff2'),
-    url(./fonts/libre-baskerville-bold.woff2) format('woff2');
-}
-@font-face {
-  font-family: 'Libre Baskerville';
-  font-style: italic;
-  font-weight: 400;
-  font-display: fallback;
-  src: local('Libre Baskerville Italic'), local('LibreBaskerville-Italic'),
-    url(/fonts/libre-baskerville-italic.woff2) format('woff2'),
-    url(./fonts/libre-baskerville-italic.woff2) format('woff2');
-}
-
 html {
-  font: 16px/180% 'Libre Baskerville', 'DejaVu Serif', 'Bitstream Vera Serif', 'Georgia', serif;
+  font: 16px/180% sans-serif;
   /* Possible sans-serif alternative; note you may want to adjust the
    * line-height and font-size if you want the fonts. Different values work
    * better for different fonts.
@@ -65,12 +27,6 @@ pre {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  /* Enable ligatures, works well with Libre Baskerville, which adds
-   * (old-fashioned but handsome) ligatures on "st", "ct", and "sp".
-   *
-   * You'll need to add "&subset=all" if you're using it from Google Fonts:
-   *   https://fonts.googleapis.com/css?family=Libre+Baskerville&subset=all
-   */
   font-variant-ligatures: common-ligatures discretionary-ligatures;
   font-feature-settings: 'liga' on, 'dlig' on;
 }
@@ -165,29 +121,6 @@ a:hover code  {
   color: #6491ff;                      /* Also change colour of code on hover. */
 }
 
-form {                                 /* Make sure forms don't affect visual layout. */
-  display: inline;
-  margin: 0;
-  padding: 0;
-}
-
-.link {
-  background: transparent;             /* Reset basic appearance. */
-  border: none;
-  outline: none;
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-  font: inherit;
-  line-height: 1rem;
-  display: inline;
-
-  -moz-user-select: inherit;           /* Otherwise text isn't selectable. */
-  -webkit-appearance: none;
-}
-
-button.link[disabled]       { color: #666; }
-button.link[disabled]:hover { text-decoration: none; cursor: not-allowed; }
 
 /* HEADERS */
 
@@ -221,34 +154,6 @@ h5, h6 {
 /* BLOCKQUOTE */
 blockquote {
   font-style: italic;                  /* Quotations are usually typeset in italics. */
-}
-
-
-/* IMAGES */
-img {
-  max-width: 100%;                     /* Make sure it's never larger than the page. */
-}
-figure {
-  text-align: center;                  /* Centre images and associated captions (if any). */
-  margin: 1rem 0;                      /* Don't need 40px of margin on either side. */
-}
-
-figure.border {
-  border: 1px solid /*bordercolor*/#aaa; /* Add border. */
-  padding: 5px;                        /* Slight gap between image and border. */
-  margin: -5px;                        /* Put the border in the margin, so the padding doesn't shrink the image. */
-}
-
-@media (min-width: /*bodywidth*/54em) { /* Only if the screen is wide enough. */
-  figure.full {                        /* Make sure this is after .border so that adding both works. */
-    margin-left: /*padx*/-4rem;
-    width: calc(100% + /*padx*/8rem);
-  }
-
-  figure.full.border {
-    border-left: none;                 /* Remove side borders on .full */
-    border-right: none;
-  }
 }
 
 
@@ -289,69 +194,6 @@ h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
   color: inherit;
 }
 
-
-/* TABLES */
-table {
-  border-collapse: collapse;           /* No space between borders. */
-  width: 100%;
-}
-table + table {
-  margin-top: 2em;                     /* Add margin for subsequent tables. */
-}
-
-@media (min-width: /*bodywidth*/54em) {  /* Only if the screen is wide enough. */
-  table.full {
-    margin-left: /*padx*/-3.5rem;
-    width: calc(100% + /*padx*/7rem);
-  }
-}
-
-caption {
-  font-weight: bold;                   /* Make caption stand out more. */
-}
-
-tr {
-  border-bottom: 1px solid #ddd;       /* Divide rows with a border. */
-}
-table > tr:last-child, tbody tr:last-child, tfoot tr:last-child {
-  border-bottom: none;                 /* No border on the last row. */
-}
-tfoot tr:first-child {
-  border-top: 1px solid #ddd;          /* Continue border on first tfoot row; removed with tbody tr:last-child. */
-}
-
-td, th {
-  padding: .2em .5em;                  /* Whitespace on top/bottom to make it less dense. */
-                                       /* And to the side to prevent cells from touching. */
-  hyphens: none;                       /* Disable hyphenation by default, as it tends to wreak havoc with cell width calculations. */
-}
-
-td.left, th.left  {                    /* Left aligned table cells (mainly for <th>). */
-  text-align: left;
-}
-td.right, th.right {                   /* Right aligned table cells. */
-  text-align: right;
-}
-table td.right {
-    font-feature-settings: 'tnum' on;  /* Use tabular numbers for alignment. */
-    font-variant-numeric: tabular-nums;
-    font-family: sans-serif;           /* Libre Baskerville has no aligned numbers :-( */
-}
-
-/* SUPER- AND SUBSCRIPT */
-
-sup, sub {                             /* Make sure the line height isn't affected. */
-  height: 0;
-  line-height: 1;
-  vertical-align: baseline;
-  position: relative;
-}
-sup {
-  bottom: 1ex;
-}
-sub {
-  top: .5ex;
-}
 
 /* HORIZONTAL RULER */
 
